--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Jarvis is an autonomous "Active Defense" agent designed to proactively detect and neutralize network threats in real-time. Built with Python, it operates as a modular system where the Monitor sniffs live packets and maps them to local processes, the Detector cross-references traffic against global threat intelligence feeds (like Tor Exit Nodes), and the Firewall orchestrates OS-level blocks (via netsh or iptables) to sever malicious connections instantly. Featuring a built-in honeypot for decoy detection and multi-threaded architecture, Jarvis serves as an educational framework for understanding how automated Endpoint Detection and Response (EDR) tools defend against modern cyberattacks—use with caution, as it actively modifies system firewall rules.
+To use Jarvis, ensure you have Python 3.8+ installed and, for Windows users, Npcap (with "WinPcap API-compatible Mode" enabled). First, install the necessary dependencies by running pip install scapy psutil. Next, because the agent requires direct access to network interfaces and firewall controls, open your terminal with Administrator privileges (Windows) or use sudo (Linux). Finally, launch the agent by executing python main.py. You will see "Active Defense Online" once the system is live; verify it works by visiting http://localhost:8080 to trigger the internal honeypot or by browsing the web to watch the packet sniffer analyze traffic in real-time.
